compiler/CMLangv2/CMLangv2Parser.py
# Generated from /Users/seankinzer/ACTLab/cmlang/cmlang.code/compiler/CMLangv2/CMLangv2.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class CMLangv2Parser ( Parser ):

    grammarFileName = "CMLangv2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "','", "'['", 
                     "']'", "':'", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", 
                     "'?'", "'int'", "'float'", "'str'", "'bool'", "'complex'", 
                     "'input'", "'output'", "'state'", "'param'", "'spring'", 
                     "'reservoir'", "'component'", "'index'", "'flow'", 
                     "'.*'", "'.\\'", "'./'", "'^'", "'break'", "'return'", 
                     "'function'", "'for'", "'while'", "'end'", "'global'", 
                     "'if'", "'clear'", "'else'", "'elseif'", "'<='", "'>='", 
                     "'=='", "'~='", "'transpose'", "'.''", "';'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "INPUT", "OUTPUT", "STATE", "PARAMETER", 
                      "SPRING", "RESERVOIR", "COMPONENT", "INDEX", "FLOW", 
                      "ARRAYMUL", "ARRAYDIV", "ARRAYRDIV", "POW", "BREAK", 
                      "RETURN", "FUNCTION", "FOR", "WHILE", "END", "GLOBAL", 
                      "IF", "CLEAR", "ELSE", "ELSEIF", "LE_OP", "GE_OP", 
                      "EQ_OP", "NE_OP", "TRANSPOSE", "NCTRANSPOSE", "SEMI", 
                      "STRING_LITERAL", "IDENTIFIER", "DECIMAL_INTEGER", 
                      "OCT_INTEGER", "HEX_INTEGER", "BIN_INTEGER", "IMAG_NUMBER", 
                      "FLOAT_NUMBER", "EQ", "WHITESPACE", "NEWLINE", "BLOCKCOMMENT", 
                      "LINECOMMENT" ]

    RULE_cmlang = 0
    RULE_component_list = 1
    RULE_component_definition = 2
    RULE_flow_list = 3
    RULE_flow = 4
    RULE_flow_expression = 5
    RULE_literal = 6
    RULE_flow_index_list = 7
    RULE_flow_index = 8
    RULE_flow_declaration_list = 9
    RULE_index_declaration_list = 10
    RULE_index_declaration = 11
    RULE_prefix_expression = 12
    RULE_array_expression = 13
    RULE_group_expression = 14
    RULE_function_expression = 15
    RULE_function_id = 16
    RULE_nested_expression = 17
    RULE_index_expression = 18
    RULE_index_expression_list = 19
    RULE_expression_list = 20
    RULE_expression = 21
    RULE_unary_op = 22
    RULE_multiplicative_op = 23
    RULE_additive_op = 24
    RULE_relational_op = 25
    RULE_assignment_expression = 26
    RULE_statement = 27
    RULE_statement_list = 28
    RULE_expression_statement = 29
    RULE_declaration_statement = 30
    RULE_assignment_statement = 31
    RULE_predicate_expression = 32
    RULE_bool_expression = 33
    RULE_true_expression = 34
    RULE_false_expression = 35
    RULE_iteration_statement = 36
    RULE_component_type = 37
    RULE_flow_type = 38
    RULE_dtype_specifier = 39
    RULE_integer = 40
    RULE_number = 41
    RULE_complex_number = 42

    ruleNames =  [ "cmlang", "component_list", "component_definition", "flow_list", 
                   "flow", "flow_expression", "literal", "flow_index_list", 
                   "flow_index", "flow_declaration_list", "index_declaration_list", 
                   "index_declaration", "prefix_expression", "array_expression", 
                   "group_expression", "function_expression", "function_id", 
                   "nested_expression", "index_expression", "index_expression_list", 
                   "expression_list", "expression", "unary_op", "multiplicative_op", 
                   "additive_op", "relational_op", "assignment_expression", 
                   "statement", "statement_list", "expression_statement", 
                   "declaration_statement", "assignment_statement", "predicate_expression", 
                   "bool_expression", "true_expression", "false_expression", 
                   "iteration_statement", "component_type", "flow_type", 
                   "dtype_specifier", "integer", "number", "complex_number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    INPUT=21
    OUTPUT=22
    STATE=23
    PARAMETER=24
    SPRING=25
    RESERVOIR=26
    COMPONENT=27
    INDEX=28
    FLOW=29
    ARRAYMUL=30
    ARRAYDIV=31
    ARRAYRDIV=32
    POW=33
    BREAK=34
    RETURN=35
    FUNCTION=36
    FOR=37
    WHILE=38
    END=39
    GLOBAL=40
    IF=41
    CLEAR=42
    ELSE=43
    ELSEIF=44
    LE_OP=45
    GE_OP=46
    EQ_OP=47
    NE_OP=48
    TRANSPOSE=49
    NCTRANSPOSE=50
    SEMI=51
    STRING_LITERAL=52
    IDENTIFIER=53
    DECIMAL_INTEGER=54
    OCT_INTEGER=55
    HEX_INTEGER=56
    BIN_INTEGER=57
    IMAG_NUMBER=58
    FLOAT_NUMBER=59
    EQ=60
    WHITESPACE=61
    NEWLINE=62
    BLOCKCOMMENT=63
    LINECOMMENT=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CmlangContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component_list(self):
            return self.getTypedRuleContext(CMLangv2Parser.Component_listContext,0)


        def getRuleIndex(self):
            return CMLangv2Parser.RULE_cmlang

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmlang" ):
                listener.enterCmlang(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmlang" ):
                listener.exitCmlang(self)




    def cmlang(self):

        localctx = CMLangv2Parser.CmlangContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_cmlang)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.component_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Component_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMLangv2Parser.Component_definitionContext)
            else:
                return self.getTypedRuleContext(CMLangv2Parser.Component_definitionContext,i)


        def getRuleIndex(self):
            return CMLangv2Parser.RULE_component_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponent_list" ):
                listener.enterComponent_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponent_list" ):
                listener.exitComponent_list(self)




    def component_list(self):

        localctx = CMLangv2Parser.Component_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_component_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 88
                self.component_definition()
                self.state = 91 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CMLangv2Parser.SPRING) | (1 << CMLangv2Parser.RESERVOIR) | (1 << CMLangv2Parser.COMPONENT))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Component_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component_type(self):
            return self.getTypedRuleContext(CMLangv2Parser.Component_typeContext,0)


        def IDENTIFIER(self):
            return self.getToken(CMLangv2Parser.IDENTIFIER, 0)

        def statement_list(self):
            return self.getTypedRuleContext(CMLangv2Parser.Statement_listContext,0)


        def flow_list(self):
            return self.getTypedRuleContext(CMLangv2Parser.Flow_listContext,0)


        def getRuleIndex(self):
            return CMLangv2Parser.RULE_component_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponent_definition" ):
                listener.enterComponent_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponent_definition" ):
                listener.exitComponent_definition(self)




    def component_definition(self):

        localctx = CMLangv2Parser.Component_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_component_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.component_type()
            self.state = 94
            self.match(CMLangv2Parser.IDENTIFIER)
            self.state = 95
            self.match(CMLangv2Parser.T__0)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CMLangv2Parser.INPUT) | (1 << CMLangv2Parser.OUTPUT) | (1 << CMLangv2Parser.STATE) | (1 << CMLangv2Parser.PARAMETER))) != 0):
                self.state = 96
                self.flow_list()


            self.state = 99
            self.match(CMLangv2Parser.T__1)
            self.state = 100
            self.match(CMLangv2Parser.T__2)
            self.state = 101
            self.statement_list()
            self.state = 102
            self.match(CMLangv2Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Flow_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def flow(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMLangv2Parser.FlowContext)
            else:
                return self.getTypedRuleContext(CMLangv2Parser.FlowContext,i)


        def getRuleIndex(self):
            return CMLangv2Parser.RULE_flow_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlow_list" ):
                listener.enterFlow_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlow_list" ):
                listener.exitFlow_list(self)




    def flow_list(self):

        localctx = CMLangv2Parser.Flow_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_flow_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.flow()
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CMLangv2Parser.T__4:
                self.state = 105
                self.match(CMLangv2Parser.T__4)
                self.state = 106
                self.flow()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FlowContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def flow_type(self):
            return self.getTypedRuleContext(CMLangv2Parser.Flow_typeContext,0)


        def dtype_specifier(self):
            return self.getTypedRuleContext(CMLangv2Parser.Dtype_specifierContext,0)


        def flow_expression(self):
            return self.getTypedRuleContext(CMLangv2Parser.Flow_expressionContext,0)


        def getRuleIndex(self):
            return CMLangv2Parser.RULE_flow

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlow" ):
                listener.enterFlow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlow" ):
                listener.exitFlow(self)




    def flow(self):

        localctx = CMLangv2Parser.FlowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_flow)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.flow_type()
            self.state = 113
            self.dtype_specifier()
            self.state = 114
            self.flow_expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Flow_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(CMLangv2Parser.IDENTIFIER, 0)

        def flow_index_list(self):
            return self.getTypedRuleContext(CMLangv2Parser.Flow_index_listContext,0)


        def EQ(self):
            return self.getToken(CMLangv2Parser.EQ, 0)

        def literal(self):
            return self.getTypedRuleContext(CMLangv2Parser.LiteralContext,0)


        def getRuleIndex(self):
            return CMLangv2Parser.RULE_flow_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlow_expression" ):
                listener.enterFlow_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlow_expression" ):
                listener.exitFlow_expression(self)




    def flow_expression(self):

        localctx = CMLangv2Parser.Flow_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_flow_expression)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.match(CMLangv2Parser.IDENTIFIER)
                self.state = 117
                self.flow_index_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(CMLangv2Parser.IDENTIFIER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.match(CMLangv2Parser.IDENTIFIER)
                self.state = 120
                self.match(CMLangv2Parser.EQ)
                self.state = 121
                self.literal()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERAL(self):
            return self.getToken(CMLangv2Parser.STRING_LITERAL, 0)

        def number(self):
            return self.getTypedRuleContext(CMLangv2Parser.NumberContext,0)


        def complex_number(self):
            return self.getTypedRuleContext(CMLangv2Parser.Complex_numberContext,0)


        def getRuleIndex(self):
            return CMLangv2Parser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)




    def literal(self):

        localctx = CMLangv2Parser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_literal)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(CMLangv2Parser.STRING_LITERAL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.number()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.complex_number()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Flow_index_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def flow_index(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMLangv2Parser.Flow_indexContext)
            else:
                return self.getTypedRuleContext(CMLangv2Parser.Flow_indexContext,i)


        def getRuleIndex(self):
            return CMLangv2Parser.RULE_flow_index_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlow_index_list" ):
                listener.enterFlow_index_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlow_index_list" ):
                listener.exitFlow_index_list(self)




    def flow_index_list(self):

        localctx = CMLangv2Parser.Flow_index_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_flow_index_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 129
                self.flow_index()
                self.state = 132 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CMLangv2Parser.T__5):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Flow_indexContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(CMLangv2Parser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return CMLangv2Parser.RULE_flow_index

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlow_index" ):
                listener.enterFlow_index(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlow_index" ):
                listener.exitFlow_index(self)




    def flow_index(self):

        localctx = CMLangv2Parser.Flow_indexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_flow_index)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(CMLangv2Parser.T__5)
            self.state = 135
            self.match(CMLangv2Parser.IDENTIFIER)
            self.state = 136
            self.match(CMLangv2Parser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Flow_declaration_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMLangv2Parser.Array_expressionContext)
            else:
                return self.getTypedRuleContext(CMLangv2Parser.Array_expressionContext,i)


        def getRuleIndex(self):
            return CMLangv2Parser.RULE_flow_declaration_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlow_declaration_list" ):
                listener.enterFlow_declaration_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlow_declaration_list" ):
                listener.exitFlow_declaration_list(self)




    def flow_declaration_list(self):

        localctx = CMLangv2Parser.Flow_declaration_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_flow_declaration_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.array_expression()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CMLangv2Parser.T__4:
                self.state = 139
                self.match(CMLangv2Parser.T__4)
                self.state = 140
                self.array_expression()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Index_declaration_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def index_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMLangv2Parser.Index_declarationContext)
            else:
                return self.getTypedRuleContext(CMLangv2Parser.Index_declarationContext,i)


        def getRuleIndex(self):
            return CMLangv2Parser.RULE_index_declaration_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndex_declaration_list" ):
                listener.enterIndex_declaration_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndex_declaration_list" ):
                listener.exitIndex_declaration_list(self)




    def index_declaration_list(self):

        localctx = CMLangv2Parser.Index_declaration_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_index_declaration_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.index_declaration()
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CMLangv2Parser.T__4:
                self.state = 147
                self.match(CMLangv2Parser.T__4)
                self.state = 148
                self.index_declaration()
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Index_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(CMLangv2Parser.IDENTIFIER, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMLangv2Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CMLangv2Parser.ExpressionContext,i)


        def getRuleIndex(self):
            return CMLangv2Parser.RULE_index_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndex_declaration" ):
                listener.enterIndex_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndex_declaration" ):
                listener.exitIndex_declaration(self)




    def index_declaration(self):

        localctx = CMLangv2Parser.Index_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_index_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(CMLangv2Parser.IDENTIFIER)
            self.state = 155
            self.match(CMLangv2Parser.T__5)
            self.state = 156
            self.expression(0)
            self.state = 157
            self.match(CMLangv2Parser.T__7)
            self.state = 158
            self.expression(0)
            self.state = 159
            self.match(CMLangv2Parser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prefix_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_expression(self):
            return self.getTypedRuleContext(CMLangv2Parser.Array_expressionContext,0)


        def IDENTIFIER(self):
            return self.getToken(CMLangv2Parser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return CMLangv2Parser.RULE_prefix_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrefix_expression" ):
                listener.enterPrefix_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrefix_expression" ):
                listener.exitPrefix_expression(self)




    def prefix_expression(self):

        localctx = CMLangv2Parser.Prefix_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_prefix_expression)
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.array_expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.match(CMLangv2Parser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

